--- a/Desktop/SDMExam/Dockerfile
+++ b/Desktop/SDMExam/Dockerfile
@@ -1,18 +1,6 @@
-# FROM node 
-# WORKDIR /src
-# COPY . .
-# EXPOSE 7002
-# CMD node server.js
-
-FROM node:14
-
-WORKDIR /app
-
-COPY package*.json ./
-RUN npm install
-
+FROM node 
+WORKDIR /src
 COPY . .
-
 EXPOSE 7002
+CMD node server.js
 
-CMD ["node", "server.js"]
